--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.9"
 pandas = "^1.5.2"
 requests = "^2.28.1"
+pytest = "^7.2.0"
 
 [tool.poetry.dev-dependencies]
 
